--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -26,7 +26,7 @@
     <br>
     <main>
         <div class="cadastro-form">
-            <form>
+            <form action="/cadastrar" method="post">
                 <br>
                 <h2>ChargerHelp</h2>
                 <br>
@@ -35,7 +35,7 @@
                 <input type="email" id="email" name="email" maxlength="40" required placeholder=" Digite seu Email">
                 <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder=" Digite seu CPF">
                 <input type="tel" id="telefone" name="telefone" required pattern="\(\d{3}\) \d{5}-\d{4}" placeholder=" Número de telefone">
-                <input type="password" id="Senha" name="Senha" required minlength="8" placeholder=" Crie uma senha de no mínimo 8 dígitos">
+                <input type="password" id="senha" name="senha" required minlength="8" placeholder=" Crie uma senha de no mínimo 8 dígitos">
                 <p>Já possui uma conta? <a class="link_login" href="login">Entrar</a></p>
                 <br>
                 <button type="submit">Cadastrar</button>
