--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <!-- or -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -21,10 +20,10 @@
             <li><a href="cadastro">Cadastro</a></li>
             <li><a href="login">Login</a></li>
         </ul>
-        <div class="header-icons">
+        <!-- <div class="header-icons">
             <i class='bx bx-message'></i>
             <div id="menu"><i class='bx bx-menu'></i></div>
-        </div>
+        </div> -->
     </header>
     <section class="home">
         <div class="home-img">
@@ -73,7 +72,7 @@
             Não precisa ficar aguardando o carregamento, com o <b>ChargerHelp</b> você pode realizar suas tarefas e
             voltar quando o horário selecionado terminar.
             <br>
-            <b>O tempo mínimo exigido é de 30 minutos, mas você também pode alugar por 1 hora ou mais!</b>
+            <b>O tempo mínimo exigido é de 10 minutos, mas você também pode usar por 1 hora ou mais!</b>
         </p>
         <br><br>
 
@@ -81,24 +80,27 @@
 
         <br><br><br>
         <hr>
-        <br><br><br>
+        <br><br>
         <div id="aviso">
             <p id="atencao">Atenção</p>
-            <br>
-            <p>Não deixe seu celular sobrecarregado com muitas horas de carregamento desnecessário, pois isso pode
-                resultar em:</p>
+            <br><br>
+            <h3>Não deixe seu celular sobrecarregado com muitas horas de carregamento desnecessário, pois isso pode
+                resultar em:</h3>
+                <br><br>
             <p><b>Desgaste da bateria:</b> Carregar o telefone por mais tempo do que o necessário pode desgastar a
-                bateria mais rapidamente;</p>
-            <p><b>Aquecimento:</b> O superaquecimento pode afetar negativamente o desempenho do dispositivo e, em casos
-                extremos, representar riscos de segurança;</p>
+                bateria mais rapidamente;
+                <br>
+            <b>Aquecimento:</b> O superaquecimento pode afetar negativamente o desempenho do dispositivo e, em casos
+                extremos, representar riscos de segurança;
+                <br>
             <p><b>Menor eficiência:</b> Com o tempo, baterias que são frequentemente carregadas desnecessariamente podem
                 perder a capacidade de reter uma carga completa;</p>
             <br>
-            <b>Por favor, deixe carregando somente pelo tempo necessário para evitar esses problemas. ChargerHelp se
-                preocupa com você!</b>
+            <p>Por favor, deixe carregando somente pelo tempo necessário para evitar esses problemas</p><b><i>ChargerHelp se
+                preocupa com você!</i></b>
         </div>
     </div>
-    <br><br><br><br><br>
+    <br><br>
 </body>
 
 </html>
