--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -16,7 +16,7 @@
 </head>
 <body>
         <header>
-            <a href="#" class="logo"> <i class='bx bx-plus-circle'></i>ChargerHelp</a>
+            <a href="#" class="logo"><i class='bx bx-plus-circle'></i>ChargerHelp</a>
             <ul class="navegação">
                 <li><a href="login">Login</a></li>
             </ul>
@@ -36,7 +36,7 @@
                 <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder=" Digite seu CPF">
                 <input type="tel" id="telefone" name="telefone" required pattern="\(\d{3}\) \d{5}-\d{4}" placeholder=" Número de telefone">
                 <input type="password" id="Senha" name="Senha" required minlength="8" placeholder=" Crie uma senha de no mínimo 8 dígitos">
-                <p>Já possui uma conta? <a class="link_login" href="login">Entrar</a></p>
+                <p>Já possui uma conta? <a class="link_cadastro" href="login">Entrar</a></p>
                 <br>
                 <button type="submit">Cadastrar</button>
             </form>
