--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,28 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styleLogin.css">
+  <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styleLogin.css">
     <title>login - ChargerHelp</title>
 </head>
 
+<header>
+    <a href="#" class="logo"><i class='bx bx-plus-circle'></i>ChargerHelp</a>
+    <ul class="navegação">
+        <li><a href="cadastro">Cadastro</a></li>
+    </ul>
+</header>
+
 <body>
-    <h1>ChargerHelp</h1>
     <br><br>
     <div class="login-form">
          <form method="post" action="/fazerLoginCliente">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" maxlength="40" required >
-                <br><br>
+            <br>
+            <h2>ChargerHelp</h2>
+            <br>
+            <input type="email" id="email" name="email" maxlength="40" required placeholder=" Digite seu Email">
 
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" maxlength="20" required >
-                <br><br>
-
+                <input type="password" id="senha" name="senha" maxlength="20" required placeholder="Digite sua senha" >
+                <br>
+                <p>Não possui cadastro? <a class="link_login" href="cadastro">Cadastrar-se</a></p>
+                <br>
                 <button type="submit">Entrar</button>
             </form>
         </div>
         <br>
-        <p>Não possui um cadastro? <a class="link_cadastro" href="cadastro">Clique aqui para se cadastrar</a></p>
     </main>
     <footer>
         <p>&copy; 2023 ChargerHelp</p>
