atualização css intro
atualização css intro

--- a/arquivos/styleCadastro.css
+++ b/arquivos/styleCadastro.css
@@ -147,7 +147,7 @@ button{
     border-top-left-radius: 5px;
 }
 
-.link_cadastro{
+.link_login{
     color: rgb(12, 70, 12);
     font-family: 'Poppins', sans-serif;
 }
