--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -30,12 +30,12 @@
                 <br>
                 <h2>ChargerHelp</h2>
                 <br>
-                <input type="text" id="nome" name="nome" maxlength="40" required placeholder=" Digite seu nome">
+                <input type="text" id="nome" name="nome" maxlength="40" required placeholder=" Digite seu nome" autocomplete="off">
                 
-                <input type="email" id="email" name="email" maxlength="40" required placeholder=" Digite seu Email">
-                <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder=" Digite seu CPF">
-                <input type="tel" id="telefone" name="telefone" required pattern="\(\d{3}\) \d{5}-\d{4}" placeholder=" Número de telefone">
-                <input type="password" id="Senha" name="Senha" required minlength="8" placeholder=" Crie uma senha de no mínimo 8 dígitos">
+                <input type="email" id="email" name="email" maxlength="40" required placeholder=" Digite seu Email" autocomplete="off">
+                <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder=" Digite seu CPF" autocomplete="off">
+                <input type="tel" id="telefone" name="telefone" required pattern="\(\d{3}\) \d{5}-\d{4}" placeholder=" Número de telefone" autocomplete="off">
+                <input type="password" id="Senha" name="Senha" required minlength="8" placeholder=" Crie uma senha de no mínimo 8 dígitos" autocomplete="off">
                 <p>Já possui uma conta? <a class="link_login" href="login">Entrar</a></p>
                 <br>
                 <button type="submit">Cadastrar</button>
