--- a/arquivos/styleAlugar.css
+++ b/arquivos/styleAlugar.css
@@ -1,22 +1,77 @@
-body {
-    background-color: #adb9af;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
+
 }
+
+/* paleta de cores do site e o tamanho de fontes que sera usado */
+:root{
+    --bg-color:  #adb9af;
+    --text-color: #fff;
+    --second-text-color:  #3b3b3b;
+    --main-color: rgb(17, 104, 17);
+    --other-color: #7cff9d;
+    --h1-font: 4rem;
+    --p-font: 1rem;
+
+}
+
+
+body{
+    background-color: rgb(157, 173, 157);
+    color: var(--text-color);
+}
+
 
 h1 {
-    margin-left: 2%;
-    margin-bottom: 1%;
-    margin-top: 2%;
-    color: rgb(219, 219, 219);
-    text-shadow: 4px 4px rgb(12, 70, 12);
-    font-family: "stone";
-    font-size: 140px;
+    width: 100%;
+    height: 80px;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    padding: 30px 8%;
 }
 
-h2 {
+.logo{
+    background-color: rgb(157, 173, 157);
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+    font-size: 28px;
+    font-weight: bold;
+     
+}
+
+.logo i{
+    color: var(--main-color);
+    margin-right: 5px;
+    font-weight: bold;
+}
+
+.navegação{
+    display: flex;
+    margin-right: 100px;
+}
+
+.navegação a{
+    color: var(--text-color);
+    font-size: var(--p-font);
+    font-size: 20px;
+    margin: 0 30px;
+    transition: a .55s ease;
+}
+
+.navegação a:hover{
+    color: var(--main-color);
+}
+ h2 {
     font-family: "stone";
     font-size: 36px;
     color: rgb(102, 99, 99);
@@ -27,10 +82,7 @@ h3 {
     color: rgb(102, 99, 99);
 }
 
-@font-face {
-    font-family: "stone";
-    src: url('./fontes/stoNe.ttf') format ('truetype');
-}
+
 
 h3, h4, h5 {
     margin: 0;
