--- a/arquivos/styleAlugar.css
+++ b/arquivos/styleAlugar.css
@@ -110,6 +110,7 @@ h3, h4, h5 {
     flex-direction: column;
     gap: 56px;
     align-items: center;
+
 }
 
 .cartao-armario {
@@ -117,7 +118,7 @@ h3, h4, h5 {
     justify-content: space-between;
     align-items: flex-start;
     cursor: pointer;
-
+    margin-left: 110px;
     width: 100%;
     max-width: 460px;
     max-height: 110px;
@@ -224,7 +225,7 @@ input[type="radio"]:disabled+label:hover {
 }
 
 .btn-alugar{
-    margin-top: 30px;
+    margin-top: 20px;
     width: 400px;
     display: inline-block;
     border-radius: 8px;
@@ -243,3 +244,4 @@ input[type="radio"]:disabled+label:hover {
     background: #4E9C61;
     color: white;
 }
+
