criação de trigger e inserimento de horário dos armários

--- a/arquivos/styleAlugar.css
+++ b/arquivos/styleAlugar.css
@@ -245,3 +245,18 @@ input[type="radio"]:disabled+label:hover {
     color: white;
 }
 
+/* Restante do seu CSS... */
+
+.armario-informacao {
+    /* ... Outras propriedades ... */
+    position: relative; /* Adiciona uma posição relativa para os elementos filhos */
+}
+
+.tempo-uso {
+   width: 20px;
+}
+
+.cartao-armario:hover .tempo-uso {
+    visibility: visible; /* Torna visível ao passar o mouse sobre o cartão do armário */
+    opacity: 1; /* Define a opacidade para 1 */
+}
