--- a/views/alugar.ejs
+++ b/views/alugar.ejs
@@ -17,7 +17,7 @@
 <body>
     <header>
         <a href="#" class="logo"><i class='bx bx-plus-circle'></i>ChargerHelp</a>
-        <ul class="navegação">
+        <ul class="navegacao">
             <li><a href="alugar">Seleção de carregadores</a></li>
         </ul>
     </header>
@@ -26,37 +26,37 @@
         <div class="lista-armarios">
             <input type="text" name="idCliente" value="<%= idCliente %>" id="idCliente" hidden>
             <% armarios.forEach((armario) => { %>
-            <label for="armario-<%= armario.id_armario %>" class="cartao-armario">
-                <img style="width: 108px; height: 110px; border-top-left-radius: 14px; border-bottom-left-radius: 14px"
-                    src="/type-c.jpg" />
-                <input type="radio" class="input" hidden id="armario-<%= armario.id_armario %>" name="idArmario"
-                    value="<%= armario.id_armario %>" <% if (armario.status === 'Livre' && armario.id_armario == "1") {
-                    %>checked<% } %>
-                    <% if (armario.status === 'Ocupado') { %>disabled<% } %>><br>
-                <div class="armario-informacao">
-                    <div class="armario-informacao-topo">
-                        <h3 class="armario-nome">
-                            Armário <%= armario.id_armario %>
-                        </h3>
+                <label for="armario-<%= armario.id_armario %>" class="cartao-armario">
+                    <img style="width: 108px; height: 110px; border-top-left-radius: 14px; border-bottom-left-radius: 14px"
+                        src="/type-c.jpg" />
+                    <input type="radio" class="input" hidden id="armario-<%= armario.id_armario %>" name="idArmario"
+                        value="<%= armario.id_armario %>" <% if (armario.status === 'Livre' && armario.id_armario == "1") {
+                        %>checked<% } %>
+                        <% if (armario.status === 'Ocupado') { %>disabled<% } %>><br>
+                    <div class="armario-informacao">
+                        <div class="armario-informacao-topo">
+                            <h3 class="armario-nome">
+                                Armário <%= armario.id_armario %>
+                            </h3>
+                        </div>
+                        <div class="armario-informacao-baixo">
+                            <h4 class="armario-tipo-carregador">
+                                <%= armario.tipo_carregador %>
+                            </h4>
+                            <h5 class="armario-marca-carregador">
+                                <%= armario.marca_carregador %>
+                            </h5>
+                            <span class="armario-status <% if (armario.status === 'Livre') { %>armario-disponivel-status<% } else { %>armario-ocupado-status<% } %>">
+                                <%= armario.status %>
+                            </span>
+                        </div>
                     </div>
-                    <div class="armario-informacao-baixo">
-                        <h4 class="armario-tipo-carregador">
-                            <%= armario.tipo_carregador %>
-                        </h4>
-                        <h5 class="armario-marca-carregador">
-                            <%= armario.marca_carregador %>
-                        </h5>
-                        <span class="armario-status <% if (armario.status === 'Livre') { %>armario-disponivel-status<% } else { %>armario-ocupado-status<% } %>">
-                            <%= armario.status %>
-                        </span>
-                    </div>
-                </div>
-            </label>
-            <select name="tempoUso" class="tempo-uso">
-                <option value="5">5 minutos</option>
-                <option value="15">15 minutos</option>
-                <option value="60">1 hora</option>
-            </select><br><br>
+                </label>
+                <select name="tempoUso" class="tempo-uso">
+                    <option value="5">5 minutos</option>
+                    <option value="15">15 minutos</option>
+                    <option value="60">1 hora</option>
+                </select><br><br>
             <% }) %>
         </div>
         <button type="submit" class="btn-alugar">ALUGAR</button>
