--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -15,6 +15,14 @@
     <title>Área de Cadastro - ChargerHelp</title>
 </head>
 <body>
+    <!-- esse script pega a mensagem de erro na url e mostra no alert -->
+    <script>
+        const urlParams = new URLSearchParams(window.location.search)
+        const message = urlParams.get("alertMessage")
+        if(message) alert(message)
+    </script>
+    <!-------------------------------------------------------------->
+
         <header>
             <a href="#" class="logo"><i class='bx bx-plus-circle'></i>ChargerHelp</a>
             <ul class="navegação">
