tela meus meusAlugueis, mostrando dados de alugueis do usuario do bando

--- a/arquivos/styleCadastro.css
+++ b/arquivos/styleCadastro.css
@@ -12,8 +12,8 @@
 :root{
     --bg-color:  #adb9af;
     --text-color: #fff;
-    --second-text-color:  #3b3b3b;;
-    --main-color: rgb(17, 104, 17);;
+    --second-text-color:  #3b3b3b;
+    --main-color: rgb(17, 104, 17);
     --other-color: #7cff9d;
     --h1-font: 4rem;
     --p-font: 1rem;
