--- a/arquivos/styleMeusAlugueis.css
+++ b/arquivos/styleMeusAlugueis.css
@@ -34,8 +34,9 @@ body{
 
 
 .meuAluguel{
+    margin-top: 5%;
     width: 70%;
-    height: 30vh;
+    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -44,7 +45,7 @@ body{
 }
 
 .meuHistorico{
-    height: 30vh;
+    height: 30%;
     display: flex;
     justify-content: start;
     width: 70%;
@@ -60,7 +61,7 @@ body{
 
 header{
     width: 100%;
-    height: 100px;
+    height: 10vh;
     top: 0;
     right: 0;
     z-index: 1000;
@@ -255,7 +256,7 @@ h3, h4, h5 {
     align-items: center;
     border-radius: 8px;
     cursor: pointer;
-    height: 60px;
+    min-height: 60px;
     font-size: 20px;
     font-weight: 500;
     background: transparent;
