--- a/views/alugar.ejs
+++ b/views/alugar.ejs
@@ -36,22 +36,23 @@
           id="idCliente"
           hidden
         />
-        <% armarios.forEach((armario) => { %>
+        <% armarios.forEach((armario, index) => { %>
+          <input type="radio" class="input" hidden id="armario-<%=
+          armario.id_armario %>" name="idArmario" value="<%= armario.id_armario
+          %>" <% if (armario.status === 'Livre' && index == 0) {
+          %>checked<% } %> <% if (armario.status === 'Ocupado') { %>disabled<% }
+          %>>
         <label for="armario-<%= armario.id_armario %>" class="cartao-armario">
           <img
             style="
               width: 108px;
-              height: 110px;
+              height: 106px;
               border-top-left-radius: 14px;
               border-bottom-left-radius: 14px;
             "
-            src="/type-c.jpg"
+            src="/<%= armario.tipo_carregador%>.jpg"
           />
-          <input type="radio" class="input" hidden id="armario-<%=
-          armario.id_armario %>" name="idArmario" value="<%= armario.id_armario
-          %>" <% if (armario.status === 'Livre' && armario.id_armario == "1") {
-          %>checked<% } %> <% if (armario.status === 'Ocupado') { %>disabled<% }
-          %>><br />
+          <br />
           <div class="armario-informacao">
             <div class="armario-informacao-topo">
               <h3 class="armario-nome">Armário <%= armario.id_armario %></h3>
@@ -71,11 +72,6 @@
             </div>
           </div>
         </label>
-        <select name="tempoUso" class="tempo-uso">
-          <option value="5">5 minutos</option>
-          <option value="15">15 minutos</option>
-          <option value="60">1 hora</option></select
-        ><br /><br />
         <% }) %>
       </div>
       <button type="submit" class="btn-alugar">ALUGAR</button>
