--- a/views/confirmacao.ejs
+++ b/views/confirmacao.ejs
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styleConfirmacao.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styleConfirmacao.css" />
     <title>Confirmado</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="/" class="logo"> <i class='bx bx-plus-circle'></i>ChargerHelp</a>
+      <a href="/" class="logo"> <i class="bx bx-plus-circle"></i>ChargerHelp</a>
     </header>
-    <br><br>
-    <h1>Pedido <%= idPedido %></h1>
-    <p>Armário alugado com <b>sucesso!</b></p>
-    <h3>Coloque o seu dispositivo dentro do armário selecionado</h3>
-    
-</body>
+    <br /><br />
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+      "
+    >
+      <p>Armário alugado com <b>sucesso!</b></p>
+      <h3>Coloque o seu dispositivo dentro do armário selecionado</h3>
+
+      <a href="/meusAlugueis/<%= idCliente %>">Ver meus alugueis.</a>
+    </div>
+  </body>
 </html>
